--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="this_is_your_story">THIS IS YOUR STORY</string>
     <string name="try_again">TRY AGAIN</string>
     <string name="sampletextsampletextsampletext">SAMPLETEXTSAMPLETEXTSAMPLETEXT</string>
+    <string name="used_words">USED WORDS</string>
 </resources>
